<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ocean_blue"
        android:backgroundTint="@color/ocean_blue"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">


            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/date_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ems="10"
                        android:inputType="date" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_dive_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dive_name" />

                    <EditText
                        android:id="@+id/dive_name_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_dive_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dive_site" />

                    <EditText
                        android:id="@+id/dive_site_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_bottom_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_time_mins" />

                    <EditText
                        android:id="@+id/bottom_time_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_max_depth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_depth_m" />

                    <EditText
                        android:id="@+id/max_depth_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ems="10"
                        android:inputType="number" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/coral_dark"
        android:text="@string/save"
        android:textColor="@color/ocean_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>