<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ocean_blue_light"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/item_dive_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="Dive 1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_bottom_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/item_max_depth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/dive_site"
            android:textColor="@color/coral_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/item_dive_title"
            app:layout_constraintTop_toBottomOf="@+id/item_dive_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/bottom_time_mins"
            android:textColor="@color/coral_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/item_dive_title"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/max_depth_m"
            android:textColor="@color/coral_dark"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_bottom_time"
            app:layout_constraintTop_toTopOf="@+id/item_bottom_time" />

        <TextView
            android:id="@+id/item_dive_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>